--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=laravel
-DB_PASSWORD='Ididit99(('
+DB_PASSWORD=''
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -32,10 +32,10 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=AKIAIQK5HFJIM2SS674Q 
-AWS_SECRET_ACCESS_KEY=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 
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=arn:aws:s3:::lavacoach
+AWS_BUCKET=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
